# StrataEngine

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_allocators.cpp
src/: main.cpp
src/app/: app.cpp  app.hpp  input_handler.cpp  input_handler.hpp
src/core/: assert.hpp  platform.hpp  types.hpp
src/ecs/: component_pool.hpp  entity.hpp  registry.hpp  sparse_set.hpp  view.hpp
src/game/: economy.hpp  objectives.hpp  stats.hpp  world_gen.hpp
src/memory/: allocator_interface.hpp  arena_allocator.cpp  arena_allocator.hpp  memory_utils.hpp  pool_allocator.cpp  pool_allocator.hpp
src/render/: camera.hpp  renderer.cpp  renderer.hpp  tile_atlas.hpp
src/simulation/: belt_system.hpp  components.hpp  inserter_system.hpp  item_transfer.hpp  miner_system.hpp  tick_scheduler.hpp
src/spatial/: spatial_grid.cpp  spatial_grid.hpp
